# rust-async-nw-workshop

./: README.md  workshop.md
slides/: .gitignore  README.md  index.html  package-lock.json  package.json
workshop/: http-request.md  implement-a-future.md
workshop/lab1/http-request-finished/: Cargo.toml
workshop/lab1/http-request-finished/src/: main.rs
workshop/lab2/delay-future-finished/: Cargo.toml
workshop/lab2/delay-future-finished/src/: lib.rs
workshop/lab3/executor-finished/: Cargo.toml
workshop/lab3/executor-finished/src/: delay.rs  executor.rs  lib.rs
workshop/lab4/rtalk-finished/rtalk-client/: Cargo.toml
workshop/lab4/rtalk-finished/rtalk-client/src/: main.rs
workshop/lab4/rtalk-finished/rtalk-codec/src/: lib.rs
workshop/lab4/rtalk-finished/rtalk-server/: Cargo.toml
workshop/lab4/rtalk-finished/rtalk-server/src/: main.rs
workshop/lab4/rtalk-start/: Cargo.toml
workshop/lab4/rtalk-start/rtalk-client/: Cargo.toml
workshop/lab4/rtalk-start/rtalk-client/src/: main.rs
workshop/lab4/rtalk-start/rtalk-codec/: Cargo.toml
workshop/lab4/rtalk-start/rtalk-server/: Cargo.toml
workshop/site/: package-lock.json
workshop/site/codelabs/: executor.md  http-request.md  implement-a-future.md  network-client.md
workshop/site/codelabs/build-an-executor/: codelab.json  index.html
workshop/site/codelabs/http-request/: codelab.json  index.html
workshop/site/codelabs/implement-a-future/: codelab.json  index.html
workshop/site/codelabs/network-client/: codelab.json  index.html
workshop/site/tasks/helpers/: opts.js
(+4 files in other folders)
