[package]
name = "rtalk-server"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <avranju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
env_logger = "0.7"
futures = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }

rtalk-codec = { path = "../rtalk-codec" }